# disciplinas

./: .gitignore  README.md  UFABC_AEDI_Q1_2018.7z
Algoritmos e Estruturas de Dados 1/Exemplos/Lista, Pilha e Fila/: Fila_Estatica.c  Lista_Encadeada_1Geralzao.c  Lista_Encadeada_Func_Impressao.c  Lista_Encadeada_Ordenada.c  Lista_Encadeada_Remocao.c  Lista_Estatica_Sequencial.c  Pilha_Aplicacao.c  Pilha_Aplicacao_Infixo_Posfixo.c
Algoritmos e Estruturas de Dados 1/Exemplos/MergeSort/: Intercala.c
Algoritmos e Estruturas de Dados 1/Exemplos/QuickSort/: ParticionaAula.c  Quicksort.c  Separacao.c  Separacao2.c
Algoritmos e Estruturas de Dados 1/Exemplos/Recursão/: BuscaRecursiva.c  DivisorRecursivo.c  MinMaxRecursivo.c  ProgramaTesteMaximoRecursivo.c  SomaRecursiva.c
Algoritmos e Estruturas de Dados 1/Exemplos/Vetores e Matrizes/: Alocando_Matrizes.c  Busca.c  Segmento_Maximo_de_Zeros.c
Algoritmos e Estruturas de Dados 1/Laboratorios/Lab9/: avlnotas.c  teste1.txt  teste2.txt  teste3.txt  teste4.txt
Algoritmos e Estruturas de Dados 2/Lab 1/: gerador_testes.c
Algoritmos e Estruturas de Dados 2/Lab 2/: hash_functions.c
Algoritmos e Estruturas de Dados 2/Lab 3/: abb.h  insercao.c  preenche_pai.c
Algoritmos e Estruturas de Dados 2/Lab 4/: arvore_rubro_negra.c  rb_tree.c
Algoritmos e Estruturas de Dados 2/Lab 5/: arvore_avl.c
Algoritmos e Estruturas de Dados 2/Lab 6/: testtrie.c  tn_trie.c  tn_trie.h
Algoritmos e Estruturas de Dados 2/Merge Sort/: ext_sort.c  ext_sort.h  geraentrada_mais_mergefiles.c  r1.txt  r10.txt  r11.txt  r2.txt  r3.txt  r4.txt  r5.txt  r7.txt  r9.txt
Aprendizado de Máquina/Lista1/: Integração de Monte Carlo.ipynb
Desenvolvimento Orientado a Tipos/lista_1/: README.md  package.yaml
Desenvolvimento Orientado a Tipos/lista_1/app/: Main.hs
Desenvolvimento Orientado a Tipos/lista_1/src/: Atividade01.hs
Desenvolvimento Orientado a Tipos/lista_1/test/: Spec.hs
Desenvolvimento Orientado a Tipos/lista_10/: README.md  atividade10.cabal
Desenvolvimento Orientado a Tipos/lista_10/src/: Atividade10.hs
Desenvolvimento Orientado a Tipos/lista_10/test/: Spec.hs
Desenvolvimento Orientado a Tipos/lista_2/: README.md  package.yaml
Desenvolvimento Orientado a Tipos/lista_2/src/: Atividade02.hs
Desenvolvimento Orientado a Tipos/lista_2/test/: Spec.hs  input.txt
Desenvolvimento Orientado a Tipos/lista_3/: README.md  atividade03.cabal  package.yaml
Desenvolvimento Orientado a Tipos/lista_4/: README.md  atividade04.cabal
Desenvolvimento Orientado a Tipos/lista_4/src/: Atividade04.hs
Desenvolvimento Orientado a Tipos/lista_4/test/: Spec.hs
Desenvolvimento Orientado a Tipos/lista_5/: README.md  atividade05.cabal
Desenvolvimento Orientado a Tipos/lista_5/src/: Atividade05.hs
Desenvolvimento Orientado a Tipos/lista_5/test/: Spec.hs
Desenvolvimento Orientado a Tipos/lista_6/: README.md  atividade06.cabal
Desenvolvimento Orientado a Tipos/lista_7/: README.md  atividade07.cabal
Desenvolvimento Orientado a Tipos/lista_7/src/: Atividade07.hs
Desenvolvimento Orientado a Tipos/lista_7/test/: Spec.hs
Desenvolvimento Orientado a Tipos/lista_8/: README.md  atividade08.cabal  stack.yaml
Desenvolvimento Orientado a Tipos/lista_8/src/: Atividade08.hs
Desenvolvimento Orientado a Tipos/lista_8/test/: Spec.hs
Desenvolvimento Orientado a Tipos/lista_9/: README.md  atividade09.cabal
Desenvolvimento Orientado a Tipos/lista_9/src/: Atividade09.hs  DummyHeap.hs  LeftistHeap.hs  NatTools.hs  SafeLeftistHeap.hs
Desenvolvimento Orientado a Tipos/lista_9/test/: Spec.hs
Desenvolvimento Orientado a Tipos/tutorial_1/: texto.md
Inteligencia_Artificial/Anotações/: .Notas.tex.swp  Notas.aux  Notas.fdb_latexmk  Notas.fls  Notas.tex
Inteligencia_Artificial/Exercicios/: Lista1.tex
Inteligencia_Artificial/Programas/: 8_Queens.py  Untitled.ipynb
Paradigmas de Programação/lista_1/: README.md  atividade1-unitario-app.cabal  package.yaml  stack.yaml
Paradigmas de Programação/lista_2/: README.md  atividade02.cabal  package.yaml
Paradigmas de Programação/lista_3/: ChangeLog.md  Readme.md  atividade03-unitario-app.cabal  package.yaml
Paradigmas de Programação/lista_4/: README.md
Paradigmas de Programação/lista_5/: README.md  package.yaml  stack.yaml
Paradigmas de Programação/lista_bonus/: README.md  bonus.cabal  package.yaml  stack.yaml
Paradigmas de Programação/teoria/: tipos_dados_algebricos.hs
Processos Estocásticos/: ising.c  markov-run.py
Processos_Estocasticos/: bayes.c  markov-run.py
Programação Orientada à Objetos/atividade7_4/: funcionarios.txt
Sistemas Distribuídos/EP1/: peer.py
Sistemas Distribuídos/EP2/: server.py
Sistemas_Distribuídos/EP1/: peer.py  received.py  registry.db  registry.json  server.py  temp.py
Sistemas_Distribuídos/EP2/: client.py  message.py  server.py
UFABC_AEDII_Q3_2018/Lab 1/: Q1_BuscaSequencial.c  Q2_BuscaBinaria.c
UFABC_AEDII_Q3_2018/Lab 3/: abb.c
UFABC_AEDII_Q3_2018/Lab 4/: rb_tree.h
UFABC_AEDII_Q3_2018/Merge Sort/: input.txt  output_teste.txt  r0.txt  r6.txt  r8.txt  util.c  util.h
(+293 files in other folders)
