name:                atividade05
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/atividade05#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
      Atividade05
  hs-source-dirs:
      src
  ghc-options: -O2 -Wall
  build-depends:
      base >=4.7 && <5
    , containers
  default-language: Haskell2010

test-suite atividade05-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -O2 -Wall
  build-depends:
      atividade05
    , base >=4.7 && <5
    , containers
    , tasty
    , tasty-hunit
  default-language: Haskell2010
