name:                atividade08
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/atividade08#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
      Atividade08
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
  default-language: Haskell2010
  ghc-options: -O2 -Wall

test-suite atividade08-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -O2 -Wall
  build-depends:
      atividade08
    , base >=4.7 && <5
    , containers
    , tasty
    , tasty-hunit
  default-language: Haskell2010
